add creation of updated_speed.html if missing
- add base dom to the templates to avoid a wkhtmltoimage error
- change missing sample data to an exisiting one

--- a/GPXOverlay/templates/elevation_template.html
+++ b/GPXOverlay/templates/elevation_template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Elevation Template</title>
+    <base href="http://www.example.com/">
     <link
       rel="stylesheet"
       type="text/css"
