--- a/GPXOverlay/templates/speed_template.html
+++ b/GPXOverlay/templates/speed_template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Speed Template</title>
+    <base href="http://www.example.com/">
     <link rel="stylesheet" type= "text/css" href="../static/speed_template.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
